--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,8 +9,12 @@
   "author": "mohamed alromaihi",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-handler": "^1.2.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.8.2"
   },
